Fix header intro subtitle element text spacing

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,10 +36,11 @@
     <div class="col-md-offset-2 col-md-8 header-intro">
       <div class="header-intro--text">
         <h1>
-          <img src="{{ '/assets/images/smashing-home-text.svg' | prepend: site.url }}" alt="Smashing" width="100%"
-                                                                   />
-          <small>Sinatra based framework that lets you<br> build excellent dashboards</small>
+          <img src="{{ '/assets/images/smashing-home-text.svg' | prepend:
+          site.url }}" alt="Smashing" width="100%" />
         </h1>
+          <h2 class="text-right">Sinatra based framework that lets you<br> build excellent
+            dashboards</h2>
       </div>
       <div class="header-intro--btn">
         <a href="#getting-started" data-bypess="true" class="btn btn-action btn-xl"> Installation</a>
